--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -25,7 +25,7 @@ button {
 
   &.flat {
     border-radius: 3px;
-    border-bottom: 1px solid var(--color-light-secondary);
+    border-bottom: 1px solid var(--color-base-secondary);
     padding: 0.3em;
 
     &.active {
@@ -41,8 +41,8 @@ button {
 
   &.raised {
     border-radius: 3px;
-    border: 1px solid var(--color-light-secondary);
-    box-shadow: 1px 1px 2px var(--color-light-secondary);
+    border: 1px solid var(--color-base-secondary);
+    box-shadow: 1px 1px 2px var(--color-base-secondary);
     padding: 0.3em;
 
     &.active {
