--- a/public/css/elements/_searchbox.css
+++ b/public/css/elements/_searchbox.css
@@ -26,7 +26,7 @@
     }
 
     & > li.selected {
-      background-color: var(--color-light-secondary);
+      background-color: var(--color-base-secondary);
     }
 
     & .label {
