--- a/public/css/layout/_layerview.css
+++ b/public/css/layout/_layerview.css
@@ -54,7 +54,7 @@
   background: var(--color-base-tertiary);
   border: none;
   box-shadow: none;
-  border-top: 1px solid var(--color-light-secondary);
+  border-top: 1px solid var(--color-base-secondary);
 }
 
 #layers > .layer-view > .drawer,
