--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -24,7 +24,6 @@
   --color-off-black: #3f3f3f;
   --color-primary: #003d57;
   --color-primary-light: #939faa;
-  --color-off-light: #eeeeee;
 }
 * {
   transition: 0.2s ease-in-out;
@@ -351,7 +350,7 @@ html.dark-mode {
   cursor: pointer;
 }
 .box-shadow {
-  border: 1px solid var(--color-off-light);
+  border: 1px solid var(--color-base-secondary);
   box-shadow: 2px 2px 4px var(--color-primary-light);
 }
 .bold {
@@ -1996,7 +1995,7 @@ dialog {
       top: 0.2em;
       left: 0.2em;
       font-size: 1.5em;
-      background-color: var(--color-off-light);
+      background-color: var(--color-base-secondary);
       padding: 0.1em;
       border-radius: 50%;
     }
