--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -17,7 +17,7 @@
 
   &.expandable > .header > .material-symbols-outlined.caret::after {
     content: 'keyboard_arrow_down';
-    color: var(--color-primary-light);
+    color: var(--color-text-secondary);
     line-height: 1.5em;
   }
 
@@ -27,7 +27,7 @@
 
   &.expanded > .header > .material-symbols-outlined.caret::after {
     content: 'keyboard_arrow_up';
-    color: var(--color-primary-light);
+    color: var(--color-text-secondary);
     line-height: 1.5em;
   }
 
@@ -73,7 +73,7 @@
 
   &.raised {
     border-radius: 2px;
-    box-shadow: 1px 1px 3px var(--color-primary-light);
+    box-shadow: 1px 1px 3px var(--color-base-secondary);
     border: 1px solid var(--color-base-secondary);
   }
 
