--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -41,7 +41,7 @@
     max-height: 500px;
     overflow-y: auto;
     overflow-x: hidden;
-    box-shadow: 1px 1px 3px var(--color-primary-light);
+    box-shadow: 1px 1px 3px var(--color-base-secondary);
     margin-top: -1px;
     text-align: left;
     background-color: var(--color-base-tertiary);
@@ -53,7 +53,7 @@
     }
 
     & > li:hover {
-      background-color: var(--color-primary-light);
+      background-color: var(--color-accent-hover);
       cursor: pointer;
     }
 
