--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -54,7 +54,7 @@
 
   label.checkbox {
     background-color: var(--color-changed);
-    color: var(--color-off-black);
+    color: var(--color-text);
     border-radius: 2px;
   }
 }
