--- a/public/css/layout/_cloudinary.css
+++ b/public/css/layout/_cloudinary.css
@@ -32,7 +32,7 @@
     p {
       margin: auto;
       text-align: center;
-      color: var(----color-off-black);
+      color: var(----color-text);
       pointer-events: none;
       user-select: none;
 
