--- a/public/css/layout/_divider.css
+++ b/public/css/layout/_divider.css
@@ -4,7 +4,7 @@
   background-image: url('../../icons/pill-vertical.svg');
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: 3px 0px 6px -3px var(--color-off-black);
+  box-shadow: 3px 0px 6px -3px var(--color-text);
   z-index: 9999;
 
   &:hover {
@@ -20,7 +20,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: var(--color-base-tertiary);
-  box-shadow: 0px -1px 6px -3px var(--color-off-black);
+  box-shadow: 0px -1px 6px -3px var(--color-text);
 
   &:hover {
     cursor: row-resize;
