--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -22,7 +22,6 @@
   --dm-color-accent: #ffffff;
   --dm-color-accent-active: #e18335;
   --dm-color-blocked: #ef5350;
-  --color-off-black: #3f3f3f;
   --color-primary: #003d57;
 }
 * {
@@ -46,11 +45,11 @@
   background-color: var(--color-base-secondary);
 }
 .off-black {
-  color: var(--color-off-black);
+  color: var(--color-text);
 }
 .off-black-background {
   color: var(--color-base-tertiary);
-  background-color: var(--color-off-black);
+  background-color: var(--color-text);
 }
 .on-colour {
   color: var(--color-accent-active);
@@ -136,11 +135,11 @@ html.dark-mode {
     input[type=datetime-local],
     textarea {
       background-color: var(--color-changed);
-      color: var(--color-off-black);
+      color: var(--color-text);
     }
     label.checkbox > .material-symbols-outlined:after,
     .dropdown > .head > .material-symbols-outlined:after {
-      color: var(--color-off-black);
+      color: var(--color-text);
     }
   }
   .active > .material-symbols-outlined {
@@ -181,7 +180,7 @@ html.dark-mode {
     &.active .head {
       background: var(--dm-color-accent-active);
       & > .material-symbols-outlined:after {
-        color: var(--color-off-black);
+        color: var(--color-text);
         background-color: transparent;
       }
     }
@@ -385,7 +384,7 @@ html.dark-mode {
   }
   label.checkbox {
     background-color: var(--color-changed);
-    color: var(--color-off-black);
+    color: var(--color-text);
     border-radius: 2px;
   }
 }
@@ -461,7 +460,7 @@ button {
 body {
   font-family: "Titillium Web", sans-serif;
   font-size: 0.8em;
-  color: var(--color-off-black);
+  color: var(--color-text);
 }
 *,
 *::after,
@@ -1420,7 +1419,7 @@ dialog.alert-confirm {
       left: 0;
       right: 0;
       z-index: 99;
-      color: var(--color-off-black);
+      color: var(--color-text);
       background: var(--color-base-tertiary);
       overflow: hidden;
       padding: 1em 1.5em;
@@ -1663,13 +1662,13 @@ dialog {
       margin-left: auto;
       width: 1.5em;
       &:after {
-        color: var(--color-off-black);
+        color: var(--color-text);
         content: "arrow_drop_down";
       }
     }
   }
   & > ul {
-    color: var(--color-off-black);
+    color: var(--color-text);
     display: none;
     position: absolute;
     max-height: 500px;
@@ -1682,7 +1681,7 @@ dialog {
     z-index: 997;
     & > li {
       padding: 5px;
-      color: var(--color-off-black);
+      color: var(--color-text);
     }
     & > li:hover {
       background-color: var(--color-accent-hover);
@@ -1923,7 +1922,7 @@ dialog {
   background-image: url('data:image/svg+xml,<svg viewBox="0 0 10 100" xmlns="http://www.w3.org/2000/svg">%0A  <line x1="5" y1="10" x2="5" y2="90" stroke-width="3" stroke="%23888" stroke-linecap="round"/>%0A</svg>');
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: 3px 0px 6px -3px var(--color-off-black);
+  box-shadow: 3px 0px 6px -3px var(--color-text);
   z-index: 9999;
   &:hover {
     cursor: col-resize;
@@ -1937,7 +1936,7 @@ dialog {
   background-repeat: no-repeat;
   background-position: center;
   background-color: var(--color-base-tertiary);
-  box-shadow: 0px -1px 6px -3px var(--color-off-black);
+  box-shadow: 0px -1px 6px -3px var(--color-text);
   &:hover {
     cursor: row-resize;
   }
@@ -1978,7 +1977,7 @@ dialog {
     p {
       margin: auto;
       text-align: center;
-      color: var(----color-off-black);
+      color: var(----color-text);
       pointer-events: none;
       user-select: none;
       & > span {
