--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -4,7 +4,7 @@
   font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 24;
   /* Customisation */
   text-align: center;
-  color: var(--color-primary);
+  color: var(--color-accent);
 
   &.active {
     color: var(--color-accent-active);
