--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -11,7 +11,7 @@
     font-size: 0.9em;
     font-weight: bold;
     color: var(--color-base-tertiary);
-    background-color: var(--color-primary);
+    background-color: var(--color-accent);
     user-select: none;
 
     button {
