--- a/public/css/elements/_searchbox.css
+++ b/public/css/elements/_searchbox.css
@@ -36,7 +36,7 @@
       color: var(--color-base-tertiary);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-primary);
+      background-color: var(--color-accent);
     }
   }
 }
