--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -22,18 +22,17 @@
   --dm-color-accent: #ffffff;
   --dm-color-accent-active: #e18335;
   --dm-color-blocked: #ef5350;
-  --color-primary: #003d57;
 }
 * {
   transition: 0.2s ease-in-out;
   transition-property: background-color;
 }
 .primary-colour {
-  color: var(--color-primary);
+  color: var(--color-accent);
 }
 .primary-background {
   color: var(--color-base-tertiary);
-  background-color: var(--color-primary);
+  background-color: var(--color-accent);
 }
 .light-background {
   background-color: var(--color-base-tertiary);
@@ -479,7 +478,7 @@ body {
 a {
   text-decoration: none;
   font-weight: bold;
-  color: var(--color-primary);
+  color: var(--color-accent);
 }
 li {
   list-style-type: none;
@@ -1299,7 +1298,7 @@ input[type=search]::-webkit-search-cancel-button:hover {
     "GRAD" 0,
     "opsz" 24;
   text-align: center;
-  color: var(--color-primary);
+  color: var(--color-accent);
   &.active {
     color: var(--color-accent-active);
   }
@@ -1339,7 +1338,7 @@ dialog.alert-confirm {
   }
   h4 {
     padding: 0.5em 1em;
-    background-color: var(--color-primary);
+    background-color: var(--color-accent);
     border-bottom: solid 2px var(--color-base-secondary);
     color: var(--color-base-tertiary);
     width: 100%;
@@ -1361,7 +1360,7 @@ dialog.alert-confirm {
   button {
     float: right;
     font-size: 0.9em;
-    color: var(--color-primary);
+    color: var(--color-accent);
     z-index: 1005;
   }
 }
@@ -1436,7 +1435,7 @@ dialog.alert-confirm {
       }
     }
     &.active {
-      background-color: var(--color-primary);
+      background-color: var(--color-accent);
       color: #fff;
       & .panel {
         bottom: 2em;
@@ -1696,7 +1695,7 @@ dialog {
       color: var(--color-base-tertiary);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-primary);
+      background-color: var(--color-accent);
     }
   }
   &.active {
@@ -1743,7 +1742,7 @@ dialog {
     font-size: 0.9em;
     font-weight: bold;
     color: var(--color-base-tertiary);
-    background-color: var(--color-primary);
+    background-color: var(--color-accent);
     user-select: none;
     button {
       cursor: pointer;
@@ -1787,7 +1786,7 @@ dialog {
       color: var(--color-base-tertiary);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-primary);
+      background-color: var(--color-accent);
     }
   }
 }
@@ -1826,7 +1825,7 @@ dialog {
       linear-gradient(
         0deg,
         transparent 0 45%,
-        var(--color-primary) 45% 55%,
+        var(--color-accent) 45% 55%,
         transparent 55% 100%);
     content: "";
     z-index: 2;
@@ -1848,7 +1847,7 @@ dialog {
         linear-gradient(
           0deg,
           transparent 0 45%,
-          var(--color-primary) 45% 55%,
+          var(--color-accent) 45% 55%,
           transparent 55% 100%);
       content: "";
       z-index: 2;
@@ -2126,7 +2125,7 @@ dialog {
     padding: 0;
     & > .header {
       grid-column: 1 / 3;
-      background-color: var(--color-primary);
+      background-color: var(--color-accent);
       color: var(--color-base-tertiary);
       border-radius: 3px;
       padding: 0 0.5em;
