Header - matched color variable in dark mode;

--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -5,6 +5,7 @@
   --color-base: #f2f2f2;
   --color-base-secondary: #f2f2f2;
   --color-base-tertiary: #ffffff;
+  --color-base-border: #cccccc;
 
   /* Text */
   --color-text: #3f3f3f;
@@ -26,6 +27,7 @@
   --dm-color-base: #222222;
   --dm-color-base-secondary: #333333;
   --dm-color-base-tertiary: #555555;
+  --dm-color-base-border: #cccccc;
 
   /* Text */
   --dm-color-text: #f2f2f2;
