--- a/public/css/base/_inputs.css
+++ b/public/css/base/_inputs.css
@@ -48,7 +48,7 @@ input[type='search'],
 input[type='date'],
 input[type='time'],
 input[type='datetime-local'] {
-  border: 1px solid var(--color-base-secondary);
+  border: 1px solid var(--color-base-border);
   padding: 5px;
 
   &:focus {
