--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -41,7 +41,7 @@ button {
 
   &.raised {
     border-radius: 3px;
-    border: 1px solid var(--color-base-secondary);
+    border: 1px solid var(--color-base-border);
     box-shadow: 1px 1px 2px var(--color-base-secondary);
     padding: 0.3em;
 
