--- a/public/css/elements/_btnPanel.css
+++ b/public/css/elements/_btnPanel.css
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 0.3em 0.5em;
   background-color: var(--color-base-tertiary);
-  border: 1px solid var(--color-base-secondary);
+  border: 1px solid var(--color-base-border);
   border-radius: 3px;
   box-shadow: 1px 1px 3px var(--color-base-secondary);
 
