Dark mode border color value;

--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -15,7 +15,7 @@
   --dm-color-base: #222222;
   --dm-color-base-secondary: #333333;
   --dm-color-base-tertiary: #555555;
-  --dm-color-base-border: #cccccc;
+  --dm-color-base-border: #333333;
   --dm-color-text: #f2f2f2;
   --dm-color-text-secondary: #d8d8d8;
   --dm-color-accent: #ffffff;
