--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -27,7 +27,7 @@
   --dm-color-base: #222222;
   --dm-color-base-secondary: #333333;
   --dm-color-base-tertiary: #555555;
-  --dm-color-base-border: #cccccc;
+  --dm-color-base-border: #333333;
 
   /* Text */
   --dm-color-text: #f2f2f2;
