Colour switch with new colours;
Dark mode now sets new colour palette.
Fixed rules for vertical divider and dropdown head text.

--- a/public/css/layout/_divider.css
+++ b/public/css/layout/_divider.css
@@ -1,6 +1,7 @@
 #ctrls-divider {
   grid-row: 1 / 4;
   grid-column: 2;
+  background-color: var(--color-base-secondary);
   background-image: url('../../icons/pill-vertical.svg');
   background-repeat: no-repeat;
   background-position: center;
