--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -15,15 +15,6 @@
   --color-info: #0b6f50;
   --color-blocked: #a21309;
   --color-changed: #ffffa7;
-  --dm-color-base: #222222;
-  --dm-color-base-secondary: #333333;
-  --dm-color-base-tertiary: #555555;
-  --dm-color-base-border: #333333;
-  --dm-color-text: #f2f2f2;
-  --dm-color-text-secondary: #d8d8d8;
-  --dm-color-accent: #ffffff;
-  --dm-color-accent-active: #e18335;
-  --dm-color-blocked: #ef5350;
 }
 * {
   transition: 0.2s ease-in-out;
@@ -1372,6 +1363,7 @@ dialog {
     padding: 5px;
     display: flex;
     align-items: center;
+    color: var(--color-text);
     & > :first-child {
       pointer-events: none;
       overflow: hidden;
@@ -1383,7 +1375,6 @@ dialog {
       margin-left: auto;
       width: 1.5em;
       &:after {
-        color: var(--color-text);
         content: "arrow_drop_down";
       }
     }
@@ -1640,6 +1631,7 @@ dialog {
 #ctrls-divider {
   grid-row: 1 / 4;
   grid-column: 2;
+  background-color: var(--color-base-secondary);
   background-image: url('data:image/svg+xml,<svg viewBox="0 0 10 100" xmlns="http://www.w3.org/2000/svg">%0A  <line x1="5" y1="10" x2="5" y2="90" stroke-width="3" stroke="%23888" stroke-linecap="round"/>%0A</svg>');
   background-repeat: no-repeat;
   background-position: center;
