--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -3,9 +3,10 @@
   --color-base: #f2f2f2;
   --color-base-secondary: #f2f2f2;
   --color-base-tertiary: #ffffff;
-  --color-base-border: #cccccc;
+  --color-base-border: #dddddd;
   --color-text: #3f3f3f;
-  --color-text-secondary: #939faa;
+  --color-text-secondary: #c2c2c2;
+  --color-text-tertiary: #dddddd;
   --color-accent: #003d57;
   --color-accent-active: #d57120;
   --color-accent-hover: #939faa;
@@ -19,9 +20,12 @@
 }
 .primary-colour {
   color: var(--color-accent);
+  &.active {
+    color: var(--color-accent-active);
+  }
 }
 .primary-background {
-  color: var(--color-base-tertiary);
+  color: var(--color-text-tertiary);
   background-color: var(--color-accent);
 }
 .light-background {
