--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -8,7 +8,7 @@
   --color-base-tertiary: #ffffff;
   --color-base-border: #dddddd;
   --color-text: #3f3f3f;
-  --color-text-secondary: #c2c2c2;
+  --color-text-secondary: #7A7A7A;
   --color-text-tertiary: #dddddd;
   --color-accent: #003d57;
   --color-accent-active: #d57120;
@@ -942,13 +942,17 @@ input {
   &:focus {
     outline: none;
   }
-}
-input.invalid {
-  opacity: 0.5;
-  outline: 1px solid var(--color-blocked);
-}
-input::placeholder {
-  text-align: left;
+  &::placeholder {
+    text-align: left;
+    color: var(--color-text-secondary);
+  }
+  &::-ms-input-placeholder {
+    color: var(--color-text-secondary);
+  }
+  &.invalid {
+    opacity: 0.5;
+    outline: 1px solid var(--color-blocked);
+  }
 }
 input::-moz-focus-inner,
 input::-moz-focus-outer {
@@ -959,7 +963,8 @@ textarea {
   resize: none;
   border: none;
   border-bottom: 0.5px dotted;
-  background-color: var(--color-base-secondary);
+  background-color: var(--color-base-tertiary);
+  color: var(--color-text);
   &:focus {
     outline: none;
   }
@@ -978,7 +983,9 @@ input[type=search],
 input[type=date],
 input[type=time],
 input[type=datetime-local] {
+  background-color: var(--color-base-tertiary);
   border: 1px solid var(--color-base-border);
+  color: var(--color-accent);
   padding: 5px;
   &:focus {
     cursor: text;
@@ -988,7 +995,8 @@ input[type=text],
 input[type=number] {
   padding: 5px;
   border: none;
-  background-color: var(--color-base-secondary);
+  background-color: var(--color-base-tertiary);
+  color: var(--color-accent);
   border-bottom: 0.5px dotted;
   display: inline-block;
   width: 100%;
@@ -996,6 +1004,9 @@ input[type=number] {
   &:focus {
     cursor: text;
   }
+}
+input[type=search]::after {
+  color: var(--color-text);
 }
 input[type=search]:focus + ul,
 input[type=search] + ul:active {
