--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -11,7 +11,7 @@
 
   /* Text */
   --color-text: #3f3f3f;
-  --color-text-secondary: #7A7A7A; /* this should be medium dark */
+  --color-text-secondary: #666666; /* this should be medium dark */
   --color-text-tertiary: #dddddd;
 
   /* Accent */
