--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -5,7 +5,7 @@
   --color-base-tertiary: #ffffff;
   --color-base-border: #dddddd;
   --color-text: #3f3f3f;
-  --color-text-secondary: #7A7A7A;
+  --color-text-secondary: #666666;
   --color-text-tertiary: #dddddd;
   --color-accent: #003d57;
   --color-accent-active: #d57120;
